Modified QuizStatisticsComponent, QuizLobbyPlayerComponent

--- a/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,11 +29,6 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
               >Fetch data</a
             >
@@ -41,6 +36,16 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/question']"
               >Question</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/stats']"
+              >Stats</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/lobby']"
+              >Lobby</a
             >
           </li>
         </ul>
