--- a/Quiz2/ClientApp/src/app/quiz-lobby/quiz-lobby.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-lobby/quiz-lobby.component.html
@@ -1,6 +1,6 @@
 <div class="main-container container border rounded">
     <div class="joinid container d-flex justify-content-center border rounded">
-        <span class="font-weight-bold">PIN: 123123123</span>
+        PIN: 123123123
     </div>
     <div>
         <app-quiz-lobby-player *ngFor="let user of users" [user]="user">
