--- a/Quiz2/ClientApp/src/app/quiz-statistics/quiz-statistics.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-statistics/quiz-statistics.component.html
@@ -1,1 +1,20 @@
-<p>quiz-statistics works!</p>
+<div class="container">
+    <div class="chart-container">
+        <canvas id="canvas"></canvas>
+    </div>
+    <p class="question">Ez egy kérdés?</p>
+    <div class="answers-container">
+        <div class="answer">
+            <div class="answer-text">Válasz1</div>
+        </div>
+        <div class="answer">
+            <div class="answer-text">Válasz2</div>
+        </div>
+        <div class="answer-correct">
+            <div class="answer-text">Válasz3</div>
+        </div>
+        <div class="answer">
+            <div class="answer-text">Válasz4</div>
+        </div>
+    </div>
+</div>
