--- a/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -58,8 +58,8 @@
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/stats']"
-              >Stats</a
+            <a class="nav-link text-dark" [routerLink]="['/lobby']"
+              >Lobby</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
