--- a/Quiz2/ClientApp/src/app/quiz-lobby-player/quiz-lobby-player.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-lobby-player/quiz-lobby-player.component.css
@@ -1,6 +1,12 @@
 .user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0.5rem;
-    background-color: #cacaca;
+    background-color: #F2B138;
     font-size: 1.2rem;
-    color: #5e6364;
+    color: #003F63;
+    border-radius: 10px;
+    border: 1px solid #353D40;
+    padding: 0.2rem;
 }
