--- a/Quiz2/ClientApp/src/app/quiz-lobby/quiz-lobby.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-lobby/quiz-lobby.component.css
@@ -1,9 +1,36 @@
-.main-container {
-    padding: 1rem;
-    background-color: #eee;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.joinid {
-    background-color: #b4b4b4;
-    font-size: 1.4rem;
+h1 {
+    text-align: center;
+    padding: 0.5rem;
+    background: #F2B138;
+    border-radius: 10px;
+    margin: 0.5rem 0rem 0.5rem 0rem;
+}
+
+h2 {
+    text-align: center;
+    padding: 0.5rem;
+    background: #003F63;
+    border-bottom: 1px solid #A1A5A6;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: #D9D9D9;
+}
+
+.main-container {
+    padding: 1rem;
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+.players {
+    background: #D9D9D9;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
