--- a/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
@@ -1,28 +1,8 @@
 <div class="main-container">
     <h1>Kérdések</h1>
     <div class="container">
-        <div class="question">
-            <span>ID: 12</span>
-            <div class="question-buttons">
-                <div class="btn">
-                    <button type="submit" [routerLink]="['/edit']">Szerkesztés</button>
-                </div>
-                <div class="btn">
-                    <button type="submit">Törlés</button>
-                </div>
-            </div>
-        </div>
-        <div class="question">
-            <span>ID: 13</span>
-            <div class="question-buttons">
-                <div class="btn">
-                    <button type="submit" [routerLink]="['/edit']">Szerkesztés</button>
-                </div>
-                <div class="btn">
-                    <button type="submit">Törlés</button>
-                </div>
-            </div>
-        </div>
+        <app-quiz-question-list-item *ngFor="let question of questions" [question]="question">
+        </app-quiz-question-list-item>
     </div>
 </div>
 <div class="btn">
