--- a/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
@@ -1,11 +1,11 @@
 <div class="main-container">
     <h1>Kérdés</h1>
     <div class="container">
-        <form action="">
+        <form [formGroup]="questionEditForm" (ngSubmit)="onSubmit()">
             <div class="description">
                 <span>Kérdés:</span>
                 <div class="details">
-                    <input id="question" type="text" placeholder="Adja meg a kérdést" required>
+                    <input id="question" type="text" placeholder="Adja meg a kérdést" formControlName="question" required>
                 </div>
             </div>
 
@@ -13,17 +13,17 @@
                 <div class="description-point">
                     <span>Pontszám:</span>
                     <div class="details">
-                        <input type="text" placeholder="Adja meg a kérdésre kapható pontszámot" required>
+                        <input type="number" placeholder="Adja meg a kérdésre kapható pontszámot" formControlName="point" required>
                     </div>
                 </div>
                 <div class="description-time">
                     <span>Idő:</span>
                     <div class="details">
-                        <input type="text" placeholder="Adja meg a kérdés idejét" required>
+                        <input type="number" placeholder="Adja meg a kérdés idejét" formControlName="time" required>
                     </div>
                     <span class="question-number">Sorszám:</span>
                     <div class="details">
-                        <input type="text" placeholder="Adja meg a kérdés sorszámát" required>
+                        <input type="number" placeholder="Adja meg a kérdés sorszámát" formControlName="number" required>
                     </div>
                 </div>
             </div>
