--- a/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.css
@@ -17,6 +17,10 @@
     margin: 0rem 0.1rem 0rem 0.1rem;
 }
 
+.btn {
+    padding: 0;
+}
+
 .btn button {
     border: none;
     background: #F2B138;
