--- a/Quiz2/ClientApp/src/app/quiz-owner-lobby/quiz-owner-lobby.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-owner-lobby/quiz-owner-lobby.component.html
@@ -1,1 +1,13 @@
-<p>quiz-owner-lobby works!</p>
+<div class="main-container container">
+    <div class="lobby-header">
+        <span>PIN: 123123123</span>
+        <div class="btn">
+            <button (click)="startGame()">Start</button>
+        </div>
+    </div>
+    <h2>Csatlakozott játékosok:</h2>
+    <div class="players">
+        <app-quiz-lobby-player *ngFor="let user of users" [user]="user" [ngStyle]="{'width':'33.3%'}">
+        </app-quiz-lobby-player>
+    </div>
+</div>
