--- a/Quiz2/ClientApp/src/app/quiz-owner-statistics/quiz-owner-statistics.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-owner-statistics/quiz-owner-statistics.component.html
@@ -1,1 +1,4 @@
-<p>quiz-owner-statistics works!</p>
+<app-quiz-statistics></app-quiz-statistics>
+<div class="btn">
+    <button>Next</button>
+</div>
