--- a/Quiz2/ClientApp/src/app/quiz-statistics/quiz-statistics.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-statistics/quiz-statistics.component.html
@@ -2,19 +2,9 @@
     <div class="chart-container">
         <canvas id="canvas"></canvas>
     </div>
-    <p class="question">Ez egy kérdés?</p>
+    <p class="question">{{ question.text }}</p>
     <div class="answers-container">
-        <div class="answer">
-            <div class="answer-text">Válasz1</div>
-        </div>
-        <div class="answer">
-            <div class="answer-text">Válasz2</div>
-        </div>
-        <div class="answer-correct">
-            <div class="answer-text">Válasz3</div>
-        </div>
-        <div class="answer">
-            <div class="answer-text">Válasz4</div>
-        </div>
+        <app-quiz-statistics-answer *ngFor="let answer of question.answers" [answer]="answer">
+        </app-quiz-statistics-answer>
     </div>
 </div>
