--- a/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -6,97 +6,9 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-/* .nav-container {
-  width: 100%;
-  background: #212329;
+nav {
+  background: #eca92b;
 }
-
-.navbar {
-  display: grid;
-  grid-template-columns: 0.2fr auto 1fr;
-  align-items: center;
-  height: 80px;
-  width: 90%;
-  max-width: 1720px;
-  margin: 0 auto;
-}
-
-#navbar-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-}
-
-#navbar-logo {
-  cursor: pointer;
-}
-
-.nav-menu {
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  list-style: none;
-  text-align: center;
-  width: 70%;
-  justify-self: end;
-}
-
-.nav-links {
-  color: #fff;
-  text-decoration: none;
-}
-
-.nav-links:hover {
-  transition: all 0.2s ease-out;
-}
-
-.menu-toggle .bar {
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  transition: all 0.3s ease-in-out;
-  background: #fff;
-}
-
-@media screen and (max-width: 768px) {
-  .nav-container {
-    position: relative;
-  }
-
-  .nav-menu {
-    display: grid;
-    grid-template-columns: auto;
-    background: red;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    top: 80px;
-    left: -100%;
-    opacity: 0;
-    transition: all 0.5s ease;
-  }
-
-  #navbar-logo {
-    margin-left: 20px;
-  }
-
-  .nav-menu.active {
-    background: #fff;
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-
-  .nav-links {
-    text-align: center;
-    line-height: 60px;
-    width: 100%;
-    display: table;
-  }
-
-  .navbar {
-    width: 100%;
-  }
-} */
 
 html {
   font-size: 14px;
@@ -107,6 +19,12 @@ html {
   }
 }
 
+/* .nav-item:hover {
+  background: #003F63;
+  border-radius: 10px;
+  transition: all .3s ease-in-out;
+} */
+
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 .08rem .75rem rgba(0, 0, 0, 0.274);
 }
