--- a/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/authentication/login']">Quiz2</a>
+      <a class="navbar-brand" [routerLink]="['/authentication/login']">Quiz</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -34,8 +34,8 @@
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/question']"
-              >Question</a
+            <a class="nav-link text-dark" [routerLink]="['/stats']"
+              >Statistics</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
