QuizQuestionService, QuizQuestionList, QuizQuestionListItem

--- a/Quiz2/ClientApp/src/app/quiz-owner-statistics/quiz-owner-statistics.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-owner-statistics/quiz-owner-statistics.component.html
@@ -1,4 +1,4 @@
 <app-quiz-statistics></app-quiz-statistics>
 <div class="btn">
-    <button>Next</button>
+    <button (click)="nextQuestion()">Next</button>
 </div>
