--- a/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.html
@@ -5,7 +5,7 @@
             <button type="submit" [routerLink]="['/edit']">Szerkesztés</button>
         </div>
         <div class="btn">
-            <button type="submit">Törlés</button>
+            <button type="submit" (click)="deleteItem(question)">Törlés</button>
         </div>
     </div>
 </div>
