--- a/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <h1>Kérdések</h1>
     <div class="container">
-        <app-quiz-question-list-item *ngFor="let question of questions" [question]="question">
+        <app-quiz-question-list-item *ngFor="let question of questions" [question]="question" (deleteQuestionListItem)="deleteQuestion(question)">
         </app-quiz-question-list-item>
     </div>
 </div>
