--- a/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
@@ -53,5 +53,5 @@
     </div>
 </div>
 <div class="btn">
-    <button type="submit">Mentés</button>
+    <button type="submit" (click)="onSubmit()">Mentés</button>
 </div>
