--- a/Quiz2/ClientApp/src/app/quiz-answer/quiz-answer.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-answer/quiz-answer.component.css
@@ -1,10 +1,16 @@
 .answer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 0.4rem;
-    margin: 0.2rem;
-    background-color: #d1d1d1;
+    height: 4.3rem;
+    font-family: 'IBM Plex Mono', monospace;
+    color: #003F63;
+    background-color: #F2B138;
+    word-break: break-all;
 }
 
 .answer:hover {
-    border: 1px solid #9c8c81;
+    border: 1px solid #003F63;
     cursor: pointer;
 }
