--- a/Quiz2/ClientApp/src/app/quiz-owner-question/quiz-owner-question.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-owner-question/quiz-owner-question.component.css
@@ -1,114 +1,62 @@
-.main-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+    box-sizing: border-box;
 }
 
 .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0.8rem;
     grid-auto-rows: minmax(50px, auto);
-    grid-gap: 1rem;
-    width: 100%;
-}
-
-.wrapper > div {
-    background: #eee;
-    padding: 1rem;
-    border-radius: 5px;
-}
-
-.wrapper > div:nth-child(odd) {
-    background: #ddd;
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 .question {
-    grid-column: 1/5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #003F63;
+    color: #D9D9D9;
+    font-size: 1.1rem;
+    padding: 0.5rem;
+    border-radius: 10px;
+    grid-column: 1/4;
     grid-row: 1/3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.question-text {
-    text-align: center;
-    font-size: 1.5rem;
-}
-
-.questions-left {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: #5e6364;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .timer-wrapper {
-    align-items: center;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-}
-
-.time {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: #5e6364;
-    text-align: center;
+    align-items: center;
+    border-radius: 10px;
+    background: #003F63;
+    color: #D9D9D9;
+    font-size: 1.1rem;
 }
 
 .answers-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: minmax(60px, auto);
-    grid-gap: 1rem;
-    grid-column: 1/6;
-    color: #5e6364;
+    margin-top: 1rem;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 0.4rem;
 }
 
-.next-button {
-    grid-column: 1/2;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+button {
     border: none;
-    color: #5e6364;
-    padding: 1rem;
+    color: #003F63;
+    background: #F2B138;
+    border: 1px solid #003F63;
+    font-family: 'IBM Plex Mono', monospace;
+    padding: 0.5rem;
+    border-radius: 10px;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
 }
 
-@media only screen and (max-width: 768px) {
-    .answers-wrapper {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-auto-rows: minmax(60px, auto);
-      grid-gap: 1rem;
-      grid-column: 1/6;
-      color: #5e6364;
-    }
-  
-    .next-button {
-      grid-column: 1/3;
-      border-radius: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      color: #5e6364;
-      padding: 1rem;
-    }
+button:active {
+    box-shadow: none;
 }
-  
-@media only screen and (max-width: 992px) {
-    .next-button {
-      grid-column: 1/3;
-      border-radius: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      color: #5e6364;
-      padding: 1rem;
-    }
+
+button:focus {
+    outline: none;
 }
