change component from game-service

--- a/Quiz2/ClientApp/src/app/quiz-game/quiz-game.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-game/quiz-game.component.html
@@ -1,1 +1,2 @@
 <ng-template appPlaceholder></ng-template>
+<button class="" id="join_group" (click)="this.gameService.joinGroup('ProbaID')">Join group</button>
