Quiz CRUD works

--- a/Quiz2/ClientApp/src/app/quiz-create/quiz-create.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-create/quiz-create.component.html
@@ -12,5 +12,5 @@
     </div>
 </div>
 <div class="btn">
-    <button type="submit" (click)="modifyQuiz()">Mentés</button>
+    <button type="submit" (click)="onSubmit()">Mentés</button>
 </div>
