--- a/Quiz2/ClientApp/src/app/quiz-list-item/quiz-list-item.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-list-item/quiz-list-item.component.css
@@ -6,7 +6,7 @@
     width: 100%;
     justify-content: space-between;
     background: #A1A5A6;
-    margin: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .quiz span {
