--- a/Quiz2/ClientApp/src/app/quiz-list-item/quiz-list-item.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-list-item/quiz-list-item.component.html
@@ -5,7 +5,7 @@
             <button type="submit" (click)="showQuestions(quiz)">Kérdések</button>
         </div>
         <div class="btn">
-            <button type="submit">Szerkesztés</button>
+            <button type="submit" (click)="modifyQuiz(quiz)">Szerkesztés</button>
         </div>
         <div class="btn">
             <button type="submit" (click)="deleteItem(quiz)">Törlés</button>
