--- a/Quiz2/ClientApp/src/app/quiz-list/quiz-list.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-list/quiz-list.component.html
@@ -8,7 +8,10 @@
   <div class="container" *ngIf="!quizzesLoaded">
     <span>Loading...</span>
   </div>
-  <div class="container" *ngIf="quizzesLoaded">
+  <div class="container" *ngIf="quizzes.length == 0 && quizzesLoaded">
+    <span>Jelenleg nincsenek kvízeid!</span>
+  </div>
+  <div class="container" *ngIf="quizzesLoaded && quizzes.length > 0">
     <app-quiz-list-item *ngFor="let quiz of quizzes" [quiz]="quiz" (deleteQuizListItem)="deleteQuiz(quiz)">
     </app-quiz-list-item>
   </div>
