--- a/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
@@ -1,57 +1,56 @@
 <div class="main-container">
-    <h1>Kérdés</h1>
-    <div class="container">
-        <form [formGroup]="questionEditForm" (ngSubmit)="onSubmit()">
-            <div class="description">
-                <span>Kérdés:</span>
-                <div class="details">
-                    <input id="question" type="text" placeholder="Adja meg a kérdést" formControlName="question" required>
-                </div>
-            </div>
-
-            <div class="number-data">
-                <div class="description-point">
-                    <span>Pontszám:</span>
-                    <div class="details">
-                        <input type="number" placeholder="Adja meg a kérdésre kapható pontszámot" formControlName="point" required>
-                    </div>
-                </div>
-                <div class="description-time">
-                    <span>Idő:</span>
-                    <div class="details">
-                        <input type="number" placeholder="Adja meg a kérdés idejét" formControlName="time" required>
-                    </div>
-                    <span class="question-number">Sorszám:</span>
-                    <div class="details">
-                        <input type="number" placeholder="Adja meg a kérdés sorszámát" formControlName="number" required>
-                    </div>
-                </div>
-            </div>
-            <div class="answers">
-                <div class="answer">
-                    <span>A:</span>
-                    <input type="text" placeholder="Adja meg a választ" required>
-                    <input type="checkbox">
-                </div>
-                <div class="answer">
-                    <span>B:</span>
-                    <input type="text" placeholder="Adja meg a választ" required>
-                    <input type="checkbox">
-                </div>
-                <div class="answer">
-                    <span>C:</span>
-                    <input type="text" placeholder="Adja meg a választ">
-                    <input type="checkbox">
-                </div>
-                <div class="answer">
-                    <span>D:</span>
-                    <input type="text" placeholder="Adja meg a választ">
-                    <input type="checkbox">
-                </div>
-            </div>
-        </form>
-    </div>
+  <h1>Kérdés</h1>
+  <div class="container">
+    <form>
+      <div class="description">
+        <span>Kérdés:</span>
+        <div class="details">
+          <input id="question" type="text" placeholder="Adja meg a kérdést" required>
+        </div>
+      </div>
+      <div class="number-data">
+        <div class="description-point">
+          <span>Pontszám:</span>
+          <div class="details">
+            <input type="number" placeholder="Adja meg a kérdésre kapható pontszámot" required>
+          </div>
+        </div>
+        <div class="description-time">
+          <span>Idő:</span>
+          <div class="details">
+            <input type="number" placeholder="Adja meg a kérdés idejét" required>
+          </div>
+          <span class="question-number">Sorszám:</span>
+          <div class="details">
+            <input type="number" placeholder="Adja meg a kérdés sorszámát" required>
+          </div>
+        </div>
+      </div>
+      <div class="answers">
+        <div class="answer">
+          <span>A:</span>
+          <input type="text" placeholder="Adja meg a választ" required>
+          <input type="checkbox">
+        </div>
+        <div class="answer">
+          <span>B:</span>
+          <input type="text" placeholder="Adja meg a választ" required>
+          <input type="checkbox">
+        </div>
+        <div class="answer">
+          <span>C:</span>
+          <input type="text" placeholder="Adja meg a választ">
+          <input type="checkbox">
+        </div>
+        <div class="answer">
+          <span>D:</span>
+          <input type="text" placeholder="Adja meg a választ">
+          <input type="checkbox">
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 <div class="btn">
-    <button type="submit" (click)="onSubmit()">Mentés</button>
+  <button type="submit" (click)="onSubmit()">Mentés</button>
 </div>
