handling game starting

--- a/Quiz2/ClientApp/src/app/quiz-owner-lobby/quiz-owner-lobby.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-owner-lobby/quiz-owner-lobby.component.html
@@ -2,7 +2,7 @@
     <div class="lobby-header">
         <span>PIN: 123123123</span>
         <div class="btn">
-            <button (click)="startGame()">Start</button>
+            <button (click)="gameService.startGame()">Start</button>
         </div>
     </div>
     <h2>Csatlakozott játékosok:</h2>
