sok minden mert lusta voltam commitolni

--- a/Quiz2/ClientApp/src/app/quiz-owner-question/quiz-owner-question.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-owner-question/quiz-owner-question.component.html
@@ -6,7 +6,7 @@
         <div class="timer-wrapper">
             <span class="time">{{ question.timer }}s</span>
         </div>
-        <button>Next</button>
+        <button (click)="gameService.nextQuestion()">Next</button>
     </div>
     <div class="answers-wrapper">
         <app-quiz-answer *ngFor="let answer of question.answers" [answer]="answer">
