--- a/Quiz2/ClientApp/src/app/quiz-answer/quiz-answer.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-answer/quiz-answer.component.html
@@ -1,3 +1,3 @@
-<button class="answer d-flex justify-content-center btn w-100">
+<button class="answer d-flex justify-content-center btn w-100" (click)="gameService.sendAnswer(answer.id)">
     {{ answer.text }}
 </button>
