Quiz CRUD works

--- a/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
@@ -6,6 +6,6 @@
     </div>
 </div>
 <div class="btn">
-    <button type="submit" [routerLink]="['/new-question']">Új kérdés</button>
+    <button type="submit" (click)="newQuestion()">Új kérdés</button>
 </div>
 
