--- a/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-list/quiz-question-list.component.html
@@ -1,11 +1,16 @@
 <div class="main-container">
     <h1>Kérdések</h1>
-    <div class="container">
+    <div class="container" *ngIf="!isLoaded">
+        <span>Kérdések betöltése...</span>
+      </div>
+      <div class="container" *ngIf="questions.length == 0 && isLoaded">
+        <span>Jelenleg nincsenek kérdéseid!</span>
+      </div>
+      <div class="container" *ngIf="isLoaded && questions.length > 0">
         <app-quiz-question-list-item *ngFor="let question of questions" [question]="question" (deleteQuestionListItem)="deleteQuestion(question)">
         </app-quiz-question-list-item>
-    </div>
+      </div>
 </div>
 <div class="btn">
     <button type="submit" (click)="newQuestion()">Új kérdés</button>
 </div>
-
