Question Edit majdnem jó, Timer

--- a/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.html
@@ -2,7 +2,7 @@
     <span>{{ question.text }}</span>
     <div class="question-buttons">
         <div class="btn">
-            <button type="submit" [routerLink]="['/edit']">Szerkesztés</button>
+            <button type="submit" (click)="editItem()">Szerkesztés</button>
         </div>
         <div class="btn">
             <button type="submit" (click)="deleteItem(question)">Törlés</button>
