--- a/Quiz2/ClientApp/src/app/quiz-question/quiz-question.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question/quiz-question.component.html
@@ -4,7 +4,7 @@
           <span class="question-text">{{question.text}}</span>
       </div>
       <div class="timer-wrapper">
-          <span class="time">{{ question.timer }}s</span>
+          <span class="time">{{ displayTime }}</span>
       </div>
   </div>
   <div class="answers-wrapper">
