--- a/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,6 +29,11 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/game']"
+              >Game</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="isAuthenticated">
             <a class="nav-link text-dark" [routerLink]="['/quizzes']"
               >Quizzes</a
             >
