--- a/Quiz2/ClientApp/src/app/quiz-edit/quiz-edit.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-edit/quiz-edit.component.html
@@ -11,6 +11,5 @@
         </form>
     </div>
 </div>
-<div class="btn">
-    <button type="submit" (click)="modifyQuiz()">Mentés</button>
-</div>
+<button type="submit" (click)="onSubmit()">Mentés</button>
+<button type="submit" [routerLink]="['../../']">Vissza</button>
