--- a/Quiz2/ClientApp/src/app/quiz-question-create/quiz-question-create.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-question-create/quiz-question-create.component.css
@@ -15,6 +15,25 @@ h1 {
   border-top-right-radius: 10px;
 }
 
+button {
+  border: none;
+  background: #F2B138;
+  font-family: 'IBM Plex Mono', monospace;
+  padding: 0.5rem;
+  margin-right: 0.7rem;
+  border-radius: 10px;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
+}
+
+button:active {
+  box-shadow: none;
+}
+
+button:focus {
+  outline: none;
+}
+
 .main-container {
   /* border: 1px solid #ddd; */
   border-radius: 10px;
@@ -48,15 +67,15 @@ h1 {
   flex-basis: 50%;
 }
 
-  .description span, .description-time span, .description-point span {
-    display: flex;
-    align-items: center;
-    background: #F2B138;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    padding: 0.6rem;
-    border-right: 1px solid #003F63;
-  }
+.description span, .description-time span, .description-point span {
+  display: flex;
+  align-items: center;
+  background: #F2B138;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 0.6rem;
+  border-right: 1px solid #003F63;
+}
 
 .time, .point {
   flex-basis: 50%;
@@ -73,9 +92,9 @@ h1 {
   background: transparent;
 }
 
-  .details input:focus {
-    outline: none;
-  }
+.details input:focus {
+  outline: none;
+}
 
 .answers {
   display: flex;
@@ -92,42 +111,24 @@ h1 {
   width: calc((100% - 13px) / 2);
 }
 
-  .answer span {
-    color: #D9D9D9;
-  }
+.answer span {
+  color: #D9D9D9;
+}
 
-  .answer input[type='text'] {
-    border: none;
-    background: transparent;
-    color: #D9D9D9;
-    flex-grow: 1;
-  }
+.answer input[type='text'] {
+  border: none;
+  background: transparent;
+  color: #D9D9D9;
+  flex-grow: 1;
+}
 
-  .answer input:focus {
-    outline: none;
-  }
+.answer input:focus {
+  outline: none;
+}
 
 .question-number {
   margin-left: 0.2rem;
 }
-
-.btn button {
-  border: none;
-  background: #F2B138;
-  font-family: 'IBM Plex Mono', monospace;
-  padding: 0.5rem;
-  border-radius: 10px;
-  transition: all 0.2s ease-in-out;
-  box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
-}
-
-  .btn button:active {
-    box-shadow: none;
-  }
-
-  .btn button:focus {
-    outline: none;
-  }
 
 @media only screen and (max-width: 768px) {
   .answers {
