--- a/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-question-edit/quiz-question-edit.component.html
@@ -51,6 +51,5 @@
     </form>
   </div>
 </div>
-<div class="btn">
-  <button type="submit" (click)="createQuestion()">Mentés</button>
-</div>
+<button type="submit" (click)="createQuestion()">Mentés</button>
+<button type="submit" [routerLink]="['../../']">Vissza</button>
