--- a/Quiz2/ClientApp/src/app/quiz-list/quiz-list.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-list/quiz-list.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div class="lobby-header">
+  <div class="quiz-list-header">
     <span>Kvízek</span>
     <div class="btn">
       <button [routerLink]="['/quizzes/new']">Új kvíz</button>
