--- a/Quiz2/ClientApp/src/app/quiz-list/quiz-list.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-list/quiz-list.component.css
@@ -35,7 +35,7 @@ h2 {
     border-bottom-right-radius: 10px;
 }
 
-.lobby-header {
+.quiz-list-header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,15 +46,11 @@ h2 {
     padding: 0.5rem;
 }
 
-.lobby-header span {
+.quiz-list-header span {
     font-size: 2rem;
     flex:1;
     display: flex;
     justify-content: center;
-}
-
-.btn {
-    padding: 0;
 }
 
 .btn button {
@@ -63,6 +59,7 @@ h2 {
     background: #003F63;
     font-family: 'IBM Plex Mono', monospace;
     padding: 0.5rem;
+    margin-right: 0.7rem;
     border-radius: 10px;
     transition: all 0.2s ease-in-out;
     box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
