--- a/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.css
+++ b/Quiz2/ClientApp/src/app/quiz-question-list-item/quiz-question-list-item.component.css
@@ -14,14 +14,10 @@
 }
 
 .question-buttons * {
-    margin: 0rem 0.1rem 0rem 0.1rem;
+    margin: 0rem 0.1rem 0rem 0.4rem;
 }
 
-.btn {
-    padding: 0;
-}
-
-.btn button {
+button {
     border: none;
     background: #F2B138;
     font-family: 'IBM Plex Mono', monospace;
@@ -31,10 +27,10 @@
     box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
 }
 
-.btn button:active {
+button:active {
     box-shadow: none;
 }
 
-.btn button:focus {
+button:focus {
     outline: none;
 }
