start game from quiz list

--- a/Quiz2/ClientApp/src/app/quiz-owner-lobby/quiz-owner-lobby.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-owner-lobby/quiz-owner-lobby.component.html
@@ -1,6 +1,6 @@
 <div class="main-container container">
     <div class="lobby-header">
-        <span>PIN: 123123123</span>
+        <span>PIN: {{ gameService.getJoinId() }}</span>
         <div class="btn">
             <button (click)="gameService.startGame()">Start</button>
         </div>
