--- a/Quiz2/ClientApp/src/app/quiz-edit/quiz-edit.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-edit/quiz-edit.component.html
@@ -5,7 +5,7 @@
             <div class="description">
                 <span>Név:</span>
                 <div class="details">
-                    <input name="quizName" type="text" placeholder="Adja meg a kvíz nevét" [(ngModel)]="quiz.name" required>
+                    <input name="quizName" type="text" placeholder="Adja meg a kvíz nevét" [(ngModel)]="quiz.name" minlength="3" required #quizName="ngModel">
                 </div>
             </div>
         </form>
