--- a/Quiz2/ClientApp/src/app/game-components/quiz-answer/quiz-answer.component.html
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-answer/quiz-answer.component.html
@@ -4,7 +4,7 @@
                 <span class="answer-text">{{ answer.text }}</span>
         </div>
         <label class="switch">
-                <input type="checkbox" [disabled]="timeIsOver || disableAnswer" [(ngModel)]="isChecked">
+                <input type="checkbox" [disabled]="timeIsOver || disableAnswer" [(ngModel)]="isChecked" (change)="sendAnswerToParentComponent(isChecked)">
                 <span class="slider round"></span>
         </label>
 </div>
