--- a/Quiz2/ClientApp/src/app/game-components/quiz-question/quiz-question.component.html
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-question/quiz-question.component.html
@@ -20,6 +20,7 @@
     [index]="i"
     [timeIsOver]="timeIsOver"
     [disableAnswer]="disableAnswers"
+    (answerIsChecked)="answerIsCheckedHandler($event)"
   >
   </app-quiz-answer>
   </div>
