--- a/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.css
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.css
@@ -88,22 +88,22 @@
     align-items: center;
 }
 
-#answerA {
+#answer0 {
     grid-column: 1/4;
     grid-row: 3/4;
 }
 
-#answerB {
+#answer1 {
     grid-column: 1/4;
     grid-row: 4/5;
 }
 
-#answerC {
+#answer2 {
     grid-column: 1/4;
     grid-row: 5/6;
 }
 
-#answerD {
+#answer3 {
     grid-column: 1/4;
     grid-row: 6/7;
 }
