quiz create módosítása

--- a/Quiz2/ClientApp/src/app/quiz-list-components/quiz-create/quiz-create.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-list-components/quiz-create/quiz-create.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-    <h1>Kvíz</h1>
+    <h1>Kvíz létrehozása</h1>
     <div class="container">
         <form [formGroup]="quizForm">
             <div class="description">
