--- a/Quiz2/ClientApp/src/app/quiz-list-components/quiz-create/quiz-create.component.html
+++ b/Quiz2/ClientApp/src/app/quiz-list-components/quiz-create/quiz-create.component.html
@@ -4,11 +4,11 @@
         <form [formGroup]="quizForm">
             <div class="description">
                 <span>Név:</span>
-                <div class="details">
-                    <input id="quiznev" formControlName="quiznev" type="text" placeholder="Adja meg a kvíz nevét" required>
+                <div class="details" [ngClass]="{'details-invalid': quizForm.get('quiznev').invalid && quizForm.get('quiznev').dirty}">
+                    <input id="quiznev" formControlName="quiznev" type="text" placeholder="Add meg a kvíz nevét" required>
                 </div>
             </div>
-            <div *ngIf="quizForm.get('quiznev').invalid && quizForm.get('quiznev').dirty">
+            <div *ngIf="quizForm.get('quiznev').invalid && (quizForm.get('quiznev').dirty || quizForm.get('quiznev').touched)">
                 <span *ngIf="quizForm.get('quiznev').hasError('required')">
                     *A név megadása kötelező!
                 </span>
