--- a/Quiz2/ClientApp/src/app/quiz-list-components/shared-create-and-edit-style.css
+++ b/Quiz2/ClientApp/src/app/quiz-list-components/shared-create-and-edit-style.css
@@ -35,7 +35,6 @@ button:focus {
 }
 
 .main-container {
-    /* border: 1px solid #ddd; */
     border-radius: 10px;
     margin-bottom: 1rem;
     box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
@@ -56,6 +55,10 @@ button:focus {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     flex-grow: 1;
+}
+
+.details-invalid {
+    border: 1px solid red;
 }
 
 .description, .description-time, .description-point {
