disabel next question button

--- a/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.html
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.html
@@ -6,7 +6,7 @@
         <div class="timer-wrapper">
             <span class="time">{{ displayTime }}</span>
         </div>
-        <button class="next-btn" (click)="gameService.nextQuestion()">Következő kérdés</button>
+        <button class="next-btn" (click)="nextQuestion()" [disabled]="disableNextQuestion">Következő kérdés</button>
         <div class="answer" [id]="'answer' + i" *ngFor="let answer of question.answers; let i = index">
             <div>
                 <span class="letter">{{ letters[i] }}</span>
