--- a/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.css
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.css
@@ -14,6 +14,10 @@
     box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.37);
 }
 
+.next-btn:disabled {
+  background: #ffe1a7;
+}
+
 .next-btn:active {
     box-shadow: none;
 }
