--- a/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Quiz2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,7 +26,12 @@
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+          </li>
+          <!--<a class="nav-link text-dark" [routerLink]="['/']">Home</a>-->
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="isAuthenticated">
+            <a class="nav-link text-dark" [routerLink]="['/stats']"
+              >Eredmények</a
+            >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="isAuthenticated">
             <a class="nav-link text-dark" [routerLink]="['/game']"
