games list working

--- a/Quiz2/ClientApp/src/app/stat-list-components/stat-list-item/stat-list-item.component.html
+++ b/Quiz2/ClientApp/src/app/stat-list-components/stat-list-item/stat-list-item.component.html
@@ -1,3 +1,6 @@
 <div class="game">
-    <span><span>{{ game.id }}</span></span>
+    <span><span>{{ game.quizName }}</span></span>
+    <div class="game-buttons">
+        <button type="submit" (click)="showDetails(game)">Részletek</button>
+    </div>
 </div>
