get corrected questions

--- a/Quiz2/ClientApp/src/app/stat-game-details-components/stat-played-list-item/stat-played-list-item.component.html
+++ b/Quiz2/ClientApp/src/app/stat-game-details-components/stat-played-list-item/stat-played-list-item.component.html
@@ -1,7 +1,6 @@
 <div class="question-header">
-    <span class="rank">Helyezés: MAJD</span>
     <span class="question">{{ question.text }}</span>
-    <span class="score">Pontszám: {{question.point}}</span>
+    <span class="score">Max pontszám: {{question.points}}</span>
 </div>
 <div class="answer" *ngFor="let answer of question.answers; let i = index"
      [ngClass]="{
