--- a/Quiz2/ClientApp/src/app/stat-game-details-components/stat-owned-list-item/stat-owned-list-item.component.html
+++ b/Quiz2/ClientApp/src/app/stat-game-details-components/stat-owned-list-item/stat-owned-list-item.component.html
@@ -1,6 +1,6 @@
 <div class="game">
     <span><span>{{ user.name }}</span></span>
     <div class="game-buttons">
-        <button type="submit" (click)="showDetails(game)">Részletek</button>
+        <button type="submit" (click)="showDetails()">Részletek</button>
     </div>
 </div>
