--- a/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.html
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.html
@@ -13,10 +13,10 @@
                 <span>{{ answer.text }}</span>
             </div>
         </div>
-        <span class="answer-counter">10</span>
-        <span class="answer-counter">10</span>
-        <span class="answer-counter">10</span>
-        <span class="answer-counter">10</span>
+        <span class="answer-counter">{{stats[0]}}</span>
+        <span class="answer-counter">{{stats[1]}}</span>
+        <span class="answer-counter">{{stats[2]}}</span>
+        <span class="answer-counter">{{stats[3]}}</span>
         <div class="chart">
             <div class="chart-container">
                 <canvas id="canvas"></canvas>
