show correct answer to the owner

--- a/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.html
+++ b/Quiz2/ClientApp/src/app/game-components/quiz-owner-question/quiz-owner-question.component.html
@@ -7,7 +7,8 @@
             <span class="time">{{ displayTime }}</span>
         </div>
         <button class="next-btn" (click)="nextQuestion()" [disabled]="disableNextQuestion">Következő kérdés</button>
-        <div class="answer" [id]="'answer' + i" *ngFor="let answer of question.answers; let i = index">
+        <div class="answer" [id]="'answer' + i" *ngFor="let answer of question.answers; let i = index"
+             [ngClass]="{'correct-answer': (answer.correct === true)}">
             <div>
                 <span class="letter">{{ letters[i] }}</span>
                 <span>{{ answer.text }}</span>
